@@ -12,7 +12,7 @@ engine documentation.
 General:
     - Make "configure shortcuts" work with the part as well as with the shell
     + More "What's This?" texts, including a what's this button on the toolbar
-    + More tips of the day.
+    * More tips of the day.
     * Include an index of common tasks in the reference manual
     - Enhance the DCOP interface
 
@@ -36,7 +36,6 @@ Packets (General):
     - Work out how to right-align the packet pane close button
     - Work around Vim component bugs in script/text viewers
     - Find out how to centre column headers in list views
-    + Change the "Docked Packet" menu title according to packet type
 
 Python:
     - Allow breaking processing in python consoles
