@@ -81,6 +81,7 @@ class NSurfaceFilterCombUI : public QObject, public PacketUI,
          */
         regina::NPacket* getPacket();
         QWidget* getInterface();
+        QString getPacketMenuText() const;
         void commit();
         void refresh();
         void setReadWrite(bool readWrite);
