@@ -51,8 +51,6 @@ class PacketWindow : public KMainWindow {
     private:
         PacketPane* heldPane;
             /**< The packet pane held within this frame. */
-        QPtrList<KAction> separatorList;
-            /**< A single separator for plugging into the UI. */
 
     private:
         /**
