@@ -1,14 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <kpartgui name="packetwindow" version="4.1">
 <MenuBar>
-  <Menu name="file" noMerge="1"><text>&amp;Viewer</text>
-    <Action name="viewer_dock"/>
-    <Action name="viewer_close"/>
-  </Menu>
-  <Menu name="packet" noMerge="1"><text>&amp;Packet</text>
-    <ActionList name="packet_type_actions"/>
-    <ActionList name="packet_type_separator"/>
-    <ActionList name="packet_tracking_actions"/>
-  </Menu>
+  <ActionList name="packet_type_menu"/>
 </MenuBar>
 </kpartgui>
