@@ -25,6 +25,9 @@ Version 4.1  [ 29 February, 2004 ]
             - New Seifert fibred space constructions insertAugTriSolidTorus()
               and insertSFSOverSphere().
     USER INTERFACE:
+        - Actions specific to each packet type now appear in their own
+          context-specific menus (i.e., a "Triangulation" menu appears
+          when a triangulation is open, etc.).
         - Updated the .desktop file and mimetype tests to work correctly
           with KDE 3.2.
         - Added tip-of-the-day support.
